--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ ipython==7.27.0
 ipython-genutils==0.2.0
 jedi==0.18.0
 Jinja2==3.0.1
+joblib==1.0.1
 jsonschema==3.2.0
 jupyter-client==7.0.2
 jupyter-core==4.7.1
@@ -40,9 +41,13 @@ pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2021.1
 pyzmq==22.2.1
+scikit-learn==0.24.2
+scipy==1.7.1
 six==1.16.0
 testpath==0.5.0
+threadpoolctl==2.2.0
 tornado==6.1
 traitlets==5.1.0
 wcwidth==0.2.5
 webencodings==0.5.1
+xgboost==0.81
